--- a/css/style.css
+++ b/css/style.css
@@ -93,17 +93,17 @@ textarea {
   margin-bottom: 3.5rem;
   position: relative; }
   .heading-sec__main--lt {
-    color: #fff; }
+    color: #f0f9ff; }
     .heading-sec__main--lt::after {
       content: '';
-      background: #fff !important; }
+      background: #f0f9ff !important; }
   .heading-sec__main::after {
     content: '';
     position: absolute;
     top: calc(100% + 1.5rem);
     height: 5px;
     width: 3rem;
-    background: #0062b9;
+    background: #0c4a6e;
     left: 50%;
     transform: translateX(-50%);
     border-radius: 5px; }
@@ -114,7 +114,7 @@ textarea {
 .heading-sec__sub {
   display: block;
   text-align: center;
-  color: #777;
+  color: #9d174d;
   font-size: 2rem;
   font-weight: 500;
   max-width: 80rem;
@@ -124,7 +124,7 @@ textarea {
     .heading-sec__sub {
       font-size: 1.8rem; } }
   .heading-sec__sub--lt {
-    color: #eee; }
+    color: #e0f2fe; }
 
 .heading-sm {
   font-size: 2.2rem;
@@ -137,14 +137,14 @@ textarea {
   width: 92%; }
 
 .btn {
-  background: #fff;
-  color: #333;
+  background: #f0f9ff;
+  color: #9d174d;
   text-transform: uppercase;
   letter-spacing: 2px;
   display: inline-block;
   font-weight: 700;
   border-radius: 5px;
-  box-shadow: 0 5px 15px 0 rgba(0, 0, 0, 0.15);
+  box-shadow: 0 5px 15px 0 #082f49;
   transition: transform .3s; }
   .btn:hover {
     transform: translateY(-3px); }
@@ -155,12 +155,12 @@ textarea {
     padding: 1.5rem 5rem;
     font-size: 1.6rem; }
   .btn--theme {
-    background: #0062b9;
-    color: #fff; }
+    background: #0c4a6e;
+    color: #f0f9ff; }
   .btn--theme-inv {
-    color: #0062b9;
-    background: #fff;
-    border: 2px solid #0062b9;
+    color: #0c4a6e;
+    background: #f0f9ff;
+    border: 2px solid #0c4a6e;
     box-shadow: none;
     padding: calc(1.5rem - 2px) calc(5rem - 2px); }
 
@@ -171,7 +171,7 @@ textarea {
       padding: 8rem 0; } }
 
 .text-primary {
-  color: #fff;
+  color: #f0f9ff;
   font-size: 2.2rem;
   text-align: center;
   width: 100%;
@@ -184,8 +184,8 @@ textarea {
   display: none; }
 
 .home-hero {
-  color: #fff;
-  background: linear-gradient(to right, rgba(0, 98, 185, 0.8), rgba(0, 98, 185, 0.8)), url(../../assets/svg/common-bg.svg);
+  color: #f0f9ff;
+  background: linear-gradient(to right, #0284c7, #0284c7), url(../../assets/svg/common-bg.svg);
   background-position: center;
   height: 100vh;
   min-height: 80rem;
@@ -198,8 +198,8 @@ textarea {
   .home-hero__socials {
     position: absolute;
     top: 50%;
-    border: 2px solid #eee;
-    border-left: 2px solid #eee;
+    border: 2px solid #e0f2fe;
+    border-left: 2px solid #e0f2fe;
     transform: translateY(-50%); }
     @media only screen and (max-width: 56.25em) {
       .home-hero__socials {
@@ -218,10 +218,10 @@ textarea {
     width: 100%;
     display: block;
     padding: 1.2rem;
-    border-bottom: 2px solid #eee;
+    border-bottom: 2px solid #e0f2fe;
     transition: background .3s; }
     .home-hero__social-icon-link:hover {
-      background: rgba(255, 255, 255, 0.1); }
+      background: #0369a1; }
     .home-hero__social-icon-link--bd-none {
       border-bottom: 0; }
   .home-hero__social-icon {
@@ -247,7 +247,7 @@ textarea {
     text-align: center; }
 
 .about {
-  background: #fafafa; }
+  background: #e0f2fe; }
   .about__content {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -265,7 +265,7 @@ textarea {
           font-size: 2.4rem; } }
     .about__content-details-para {
       font-size: 1.8rem;
-      color: grey;
+      color: #831843;
       max-width: 60rem;
       line-height: 1.7;
       margin-bottom: 1rem; }
@@ -314,7 +314,7 @@ textarea {
           font-size: 2.4rem; } }
     .projects__row-content-desc {
       font-size: 1.8rem;
-      color: grey;
+      color: #831843;
       max-width: 60rem;
       line-height: 1.7;
       margin-bottom: 3rem; }
@@ -323,12 +323,12 @@ textarea {
           font-size: 1.7rem; } }
 
 .contact {
-  background: linear-gradient(to right, rgba(0, 98, 185, 0.8), rgba(0, 98, 185, 0.8)), url(../../assets/svg/common-bg.svg);
+  background: linear-gradient(to right, #0284c7, #0284c7), url(../../assets/svg/common-bg.svg);
   background-size: cover;
   background-position: center; }
   .contact__form-container {
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    background: white;
+    box-shadow: 0 0 10px #082f49;
+    background: #f0f9ff;
     padding: 4rem;
     margin-top: 6rem;
     max-width: 80rem;
@@ -345,7 +345,7 @@ textarea {
       .contact__form-field {
         margin-bottom: 3rem; } }
   .contact__form-label {
-    color: #666;
+    color: #9d174d;
     font-size: 1.4rem;
     letter-spacing: 1px;
     font-weight: 700;
@@ -353,13 +353,13 @@ textarea {
     display: block;
     text-align: left; }
   .contact__form-input {
-    color: #333;
+    color: #9d174d;
     padding: 2rem;
     width: 100%;
-    border: 1px solid #ebebeb;
+    border: 1px solid #bae6fd;
     font-size: 1.6rem;
     letter-spacing: 0px;
-    background: #f0f0f0;
+    background: #e0f2fe;
     border-radius: 5px;
     font-weight: 600;
     /* Code for Modern Browsers */
@@ -369,29 +369,29 @@ textarea {
     /* Code for Mozilla Firefox 4 to 18 */
     /* Code for Mozilla Firefox 19+ */ }
     .contact__form-input::placeholder {
-      color: #999;
+      color: #fce7f3;
       font-weight: 600;
       font-size: 1.6rem; }
     .contact__form-input::-webkit-input-placeholder {
-      color: #999;
+      color: #fce7f3;
       font-weight: 600;
       font-size: 1.6rem; }
     .contact__form-input:-ms-input-placeholder {
-      color: #999;
+      color: #fce7f3;
       font-weight: 600;
       font-size: 1.6rem; }
     .contact__form-input::-ms-input-placeholder {
-      color: #999;
+      color: #fce7f3;
       font-weight: 600;
       font-size: 1.6rem; }
     .contact__form-input:-moz-placeholder {
       opacity: 1;
-      color: #999;
+      color: #fce7f3;
       font-weight: 600;
       font-size: 1.6rem; }
     .contact__form-input::-moz-placeholder {
       opacity: 1;
-      color: #999;
+      color: #fce7f3;
       font-weight: 600;
       font-size: 1.6rem; }
   .contact__btn {
@@ -403,8 +403,8 @@ textarea {
         width: 100%; } }
 
 .project-cs-hero {
-  color: #fff;
-  background: linear-gradient(to right, rgba(0, 98, 185, 0.8), rgba(0, 98, 185, 0.8)), url(../../assets/svg/common-bg.svg);
+  color: #f0f9ff;
+  background: linear-gradient(to right, #0284c7, #0284c7), url(../../assets/svg/common-bg.svg);
   background-size: cover;
   background-position: center;
   position: relative; }
@@ -459,7 +459,7 @@ textarea {
   .project-details__desc-para {
     font-size: 1.8rem;
     line-height: 1.7;
-    color: grey;
+    color: #831843;
     margin-bottom: 2rem; }
 
 .project-details__tools-used {
@@ -472,10 +472,10 @@ textarea {
     margin-bottom: 1.5rem;
     margin-right: 1.5rem;
     font-size: 1.6rem;
-    background: rgba(153, 153, 153, 0.2);
+    background: #0c4a6e;
     border-radius: 5px;
     font-weight: 600;
-    color: #777; }
+    color: #9d174d; }
 
 .project-details__links {
   margin: 0 0; }
@@ -497,9 +497,9 @@ textarea {
   position: fixed;
   width: 100%;
   z-index: 1000;
-  background: #000;
-  background: #fff;
-  box-shadow: 0 10px 100px rgba(0, 0, 0, 0.1); }
+  background: #082f49;
+  background: #f0f9ff;
+  box-shadow: 0 10px 100px #082f49; }
   .header__content {
     display: flex;
     align-items: center;
@@ -512,17 +512,17 @@ textarea {
     display: flex;
     align-items: center;
     cursor: pointer;
-    color: #333;
+    color: #9d174d;
     transition: color .3s; }
     .header__logo-container:hover {
-      color: #0062b9; }
+      color: #0c4a6e; }
   .header__logo-img-cont {
     width: 5rem;
     height: 5rem;
     border-radius: 50px;
     overflow: hidden;
     margin-right: 1.5rem;
-    background: #0062b9; }
+    background: #0c4a6e; }
     @media only screen and (max-width: 56.25em) {
       .header__logo-img-cont {
         width: 4.5rem;
@@ -548,13 +548,13 @@ textarea {
     padding: 2.2rem 3rem;
     display: inline-block;
     font-size: 1.6rem;
-    color: #333;
+    color: #9d174d;
     text-transform: uppercase;
     letter-spacing: 1px;
     font-weight: 700;
     transition: color .3s; }
     .header__link:hover {
-      color: #0062b9; }
+      color: #0c4a6e; }
     @media only screen and (max-width: 56.25em) {
       .header__link {
         padding: 3rem 1.8rem;
@@ -571,16 +571,16 @@ textarea {
   .header__main-ham-menu-close {
     width: 100%; }
   .header__sm-menu {
-    background: #fff;
+    background: #f0f9ff;
     position: absolute;
     width: 100%;
     top: 100%;
     visibility: hidden;
     opacity: 0;
     transition: all .3s;
-    box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.1);
-    -webkit-box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.1);
-    -moz-box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.1); }
+    box-shadow: 0px 5px 5px 0px #082f49;
+    -webkit-box-shadow: 0px 5px 5px 0px #082f49;
+    -moz-box-shadow: 0px 5px 5px 0px #082f49; }
     .header__sm-menu--active {
       visibility: hidden;
       opacity: 0; }
@@ -593,23 +593,23 @@ textarea {
     text-decoration: none;
     padding: 2.5rem 3rem;
     font-size: 1.6rem;
-    color: #333;
+    color: #9d174d;
     text-align: right;
-    border-bottom: 1px solid #eee;
+    border-bottom: 1px solid #e0f2fe;
     font-weight: 700;
     text-transform: uppercase;
     letter-spacing: 2px;
     transition: color .3s; }
     .header__sm-menu-link a:hover {
-      color: #0062b9; }
+      color: #0c4a6e; }
   .header__sm-menu-link:first-child a {
-    border-top: 1px solid #eee; }
+    border-top: 1px solid #e0f2fe; }
   .header__sm-menu-link-last {
     border-bottom: 0; }
 
 .main-footer {
-  background: #000;
-  color: #fff; }
+  background: #082f49;
+  color: #f0f9ff; }
   .main-footer__upper {
     display: flex;
     justify-content: space-between;
@@ -634,7 +634,7 @@ textarea {
         width: 100%; } }
   .main-footer__short-desc {
     margin-top: 2rem;
-    color: #eee;
+    color: #e0f2fe;
     font-size: 1.5rem;
     line-height: 1.7; }
   .main-footer__social-cont {
@@ -646,8 +646,8 @@ textarea {
       margin-right: 0; }
   .main-footer__lower {
     padding: 4rem 0;
-    border-top: 1px solid #444;
-    color: #eee;
+    border-top: 1px solid #0369a1;
+    color: #e0f2fe;
     font-size: 1.2rem;
     text-align: left;
     text-align: center; }
@@ -667,15 +667,15 @@ textarea {
     margin-bottom: 1.5rem;
     margin-right: 1.5rem;
     font-size: 1.6rem;
-    background: rgba(153, 153, 153, 0.2);
+    background: #0c4a6e;
     border-radius: 5px;
     font-weight: 600;
-    color: #777; }
+    color: #f9a8d4; }
 
 .mouse {
   width: 25px;
   height: 40px;
-  border: 2px solid #eee;
+  border: 2px solid #e0f2fe;
   border-radius: 60px;
   position: relative;
   overflow: hidden; }
@@ -687,7 +687,7 @@ textarea {
     top: 7px;
     left: 50%;
     transform: translateX(-50%);
-    background-color: #eee;
+    background-color: #e0f2fe;
     border-radius: 50%;
     opacity: 1;
     animation: wheel 1.3s infinite;
