--- a/css/style.css
+++ b/css/style.css
@@ -451,16 +451,18 @@ textarea {
 
 .project-details__content-main {
   width: 100%;
-  max-width: 70rem;
   margin: auto; }
 
 .project-details__desc {
-  margin: 0 0 7rem 0; }
+  display: flex;
+  width: 100%;
+  margin: 0 0 2rem 0; }
   .project-details__desc-para {
+    width: 50%;
     font-size: 1.8rem;
     line-height: 1.7;
     color: #831843;
-    margin-bottom: 2rem; }
+    margin: 2rem; }
 
 .project-details__tools-used {
   margin: 0 0 7rem 0; }
