--- a/css/style.css
+++ b/css/style.css
@@ -96,7 +96,7 @@ textarea {
     color: #f0f9ff; }
     .heading-sec__main--lt::after {
       content: '';
-      background: #f0f9ff !important; }
+      background: #172554 !important; }
   .heading-sec__main::after {
     content: '';
     position: absolute;
@@ -114,7 +114,7 @@ textarea {
 .heading-sec__sub {
   display: block;
   text-align: center;
-  color: #9d174d;
+  color: #be185d;
   font-size: 2rem;
   font-weight: 500;
   max-width: 80rem;
@@ -137,8 +137,8 @@ textarea {
   width: 92%; }
 
 .btn {
-  background: #f0f9ff;
-  color: #9d174d;
+  background: #172554;
+  color: #be185d;
   text-transform: uppercase;
   letter-spacing: 2px;
   display: inline-block;
@@ -155,11 +155,11 @@ textarea {
     padding: 1.5rem 5rem;
     font-size: 1.6rem; }
   .btn--theme {
-    background: #0c4a6e;
+    background: #172554;
     color: #f0f9ff; }
   .btn--theme-inv {
-    color: #0c4a6e;
-    background: #f0f9ff;
+    color: #f0f9ff;
+    background: #172554;
     border: 2px solid #0c4a6e;
     box-shadow: none;
     padding: calc(1.5rem - 2px) calc(5rem - 2px); }
@@ -265,7 +265,7 @@ textarea {
           font-size: 2.4rem; } }
     .about__content-details-para {
       font-size: 1.8rem;
-      color: #831843;
+      color: #be185d;
       max-width: 60rem;
       line-height: 1.7;
       margin-bottom: 1rem; }
@@ -314,7 +314,7 @@ textarea {
           font-size: 2.4rem; } }
     .projects__row-content-desc {
       font-size: 1.8rem;
-      color: #831843;
+      color: #be185d;
       max-width: 60rem;
       line-height: 1.7;
       margin-bottom: 3rem; }
@@ -328,7 +328,7 @@ textarea {
   background-position: center; }
   .contact__form-container {
     box-shadow: 0 0 10px #082f49;
-    background: #f0f9ff;
+    background: #172554;
     padding: 4rem;
     margin-top: 6rem;
     max-width: 80rem;
@@ -345,7 +345,7 @@ textarea {
       .contact__form-field {
         margin-bottom: 3rem; } }
   .contact__form-label {
-    color: #9d174d;
+    color: #be185d;
     font-size: 1.4rem;
     letter-spacing: 1px;
     font-weight: 700;
@@ -353,7 +353,7 @@ textarea {
     display: block;
     text-align: left; }
   .contact__form-input {
-    color: #9d174d;
+    color: #be185d;
     padding: 2rem;
     width: 100%;
     border: 1px solid #bae6fd;
@@ -461,7 +461,7 @@ textarea {
     width: 50%;
     font-size: 1.8rem;
     line-height: 1.7;
-    color: #831843;
+    color: #be185d;
     margin: 2rem; }
 
 .project-details__tools-used {
@@ -477,7 +477,7 @@ textarea {
     background: #0c4a6e;
     border-radius: 5px;
     font-weight: 600;
-    color: #9d174d; }
+    color: #be185d; }
 
 .project-details__links {
   margin: 0 0; }
@@ -500,7 +500,7 @@ textarea {
   width: 100%;
   z-index: 1000;
   background: #082f49;
-  background: #f0f9ff;
+  background: #172554;
   box-shadow: 0 10px 100px #082f49; }
   .header__content {
     display: flex;
@@ -514,7 +514,7 @@ textarea {
     display: flex;
     align-items: center;
     cursor: pointer;
-    color: #9d174d;
+    color: #be185d;
     transition: color .3s; }
     .header__logo-container:hover {
       color: #0c4a6e; }
@@ -550,7 +550,7 @@ textarea {
     padding: 2.2rem 3rem;
     display: inline-block;
     font-size: 1.6rem;
-    color: #9d174d;
+    color: #be185d;
     text-transform: uppercase;
     letter-spacing: 1px;
     font-weight: 700;
@@ -573,7 +573,7 @@ textarea {
   .header__main-ham-menu-close {
     width: 100%; }
   .header__sm-menu {
-    background: #f0f9ff;
+    background: #172554;
     position: absolute;
     width: 100%;
     top: 100%;
@@ -595,7 +595,7 @@ textarea {
     text-decoration: none;
     padding: 2.5rem 3rem;
     font-size: 1.6rem;
-    color: #9d174d;
+    color: #be185d;
     text-align: right;
     border-bottom: 1px solid #e0f2fe;
     font-weight: 700;
