--- a/css/style.css
+++ b/css/style.css
@@ -96,7 +96,7 @@ textarea {
     color: #f0f9ff; }
     .heading-sec__main--lt::after {
       content: '';
-      background: #2e1065 !important; }
+      background: #172554 !important; }
   .heading-sec__main::after {
     content: '';
     position: absolute;
@@ -137,7 +137,7 @@ textarea {
   width: 92%; }
 
 .btn {
-  background: #2e1065;
+  background: #172554;
   color: #be185d;
   text-transform: uppercase;
   letter-spacing: 2px;
@@ -155,11 +155,11 @@ textarea {
     padding: 1.5rem 5rem;
     font-size: 1.6rem; }
   .btn--theme {
-    background: #2e1065;
+    background: #172554;
     color: #f0f9ff; }
   .btn--theme-inv {
     color: #f0f9ff;
-    background: #2e1065;
+    background: #172554;
     border: 2px solid #0c4a6e;
     box-shadow: none;
     padding: calc(1.5rem - 2px) calc(5rem - 2px); }
@@ -191,6 +191,18 @@ textarea {
   min-height: 80rem;
   max-height: 120rem;
   position: relative; }
+.home-hero-img {
+  color: #f0f9ff;
+  background: linear-gradient(to right, #0284c7, #0284c7), url(../../assets/svg/common-bg.svg);
+  background-position: center;
+  min-height: 40rem;
+  max-height: 80rem;
+  display: flex;
+  position: relative; }
+.headers__row-img {
+    width: 100%;
+    display: block;
+    object-fit: contain; }
   @media only screen and (max-width: 37.5em) {
     .home-hero {
       height: unset;
@@ -328,7 +340,7 @@ textarea {
   background-position: center; }
   .contact__form-container {
     box-shadow: 0 0 10px #082f49;
-    background: #2e1065;
+    background: #172554;
     padding: 4rem;
     margin-top: 6rem;
     max-width: 80rem;
@@ -500,7 +512,7 @@ textarea {
   width: 100%;
   z-index: 1000;
   background: #082f49;
-  background: #2e1065;
+  background: #172554;
   box-shadow: 0 10px 100px #082f49; }
   .header__content {
     display: flex;
@@ -573,7 +585,7 @@ textarea {
   .header__main-ham-menu-close {
     width: 100%; }
   .header__sm-menu {
-    background: #2e1065;
+    background: #172554;
     position: absolute;
     width: 100%;
     top: 100%;
