--- a/css/style.css
+++ b/css/style.css
@@ -137,8 +137,8 @@ textarea {
   width: 92%; }
 
 .btn {
-  background: #172554;
-  color: #be185d;
+  background: #1e1b4b;
+  color: #fff1f2;
   text-transform: uppercase;
   letter-spacing: 2px;
   display: inline-block;
@@ -307,7 +307,8 @@ textarea {
   .projects__row-img {
     width: 100%;
     display: block;
-    object-fit: cover; }
+    object-fit: cover;
+  }
   .projects__row-content {
     padding: 2rem 0;
     display: flex;
@@ -357,7 +358,7 @@ textarea {
       .contact__form-field {
         margin-bottom: 3rem; } }
   .contact__form-label {
-    color: #be185d;
+    color: #e0f2fe;
     font-size: 1.4rem;
     letter-spacing: 1px;
     font-weight: 700;
@@ -365,7 +366,7 @@ textarea {
     display: block;
     text-align: left; }
   .contact__form-input {
-    color: #be185d;
+    color: #e0f2fe;
     padding: 2rem;
     width: 100%;
     border: 1px solid #bae6fd;
@@ -459,7 +460,9 @@ textarea {
   margin-bottom: 6rem; }
 
 .project-details__showcase-img {
-  width: 100%; }
+  width: 100%;
+  border-radius: 5px;
+}
 
 .project-details__content-main {
   width: 100%;
@@ -526,7 +529,7 @@ textarea {
     display: flex;
     align-items: center;
     cursor: pointer;
-    color: #be185d;
+    color: #e0f2fe;
     transition: color .3s; }
     .header__logo-container:hover {
       color: #e0f2fe; }
@@ -562,7 +565,7 @@ textarea {
     padding: 2.2rem 3rem;
     display: inline-block;
     font-size: 1.6rem;
-    color: #be185d;
+    color: #e0f2fe;
     text-transform: uppercase;
     letter-spacing: 1px;
     font-weight: 700;
@@ -607,7 +610,7 @@ textarea {
     text-decoration: none;
     padding: 2.5rem 3rem;
     font-size: 1.6rem;
-    color: #be185d;
+    color: #e0f2fe;
     text-align: right;
     border-bottom: 1px solid #e0f2fe;
     font-weight: 700;
@@ -615,7 +618,7 @@ textarea {
     letter-spacing: 2px;
     transition: color .3s; }
     .header__sm-menu-link a:hover {
-      color: #0c4a6e; }
+      color: #e0f2fe; }
   .header__sm-menu-link:first-child a {
     border-top: 1px solid #e0f2fe; }
   .header__sm-menu-link-last {
@@ -681,10 +684,13 @@ textarea {
     margin-bottom: 1.5rem;
     margin-right: 1.5rem;
     font-size: 1.6rem;
-    background: #0c4a6e;
+    background: #eef2ff;
+    border-color: #0284c7;
+    border-width: 2px;
+    border-style: solid;
     border-radius: 5px;
     font-weight: 600;
-    color: #f9a8d4; }
+    color: #1e1b4b; }
 
 .mouse {
   width: 25px;
